fixed header alignment issues in tables

--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -188,3 +188,9 @@ table {
 
 }
 
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS styles go here */
+  .mat-header-row, .mat-row {
+    -ms-flex-align: stretch;
+  }
+}
