--- a/src/app/ticket/ticket.component.css
+++ b/src/app/ticket/ticket.component.css
@@ -203,7 +203,6 @@ mat-header-row {
 #category {
   background: #0F75BD;
   color: white; 
-  cursor: pointer;
 }
 
 mat-row {
@@ -354,4 +353,15 @@ table {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     color: #064B94;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS styles go here */
+  .mat-header-row, .mat-row {
+    -ms-flex-align: stretch;
+  }
+  mat-table {
+    border-bottom: 1px solid #0F75BD;
+    box-shadow: 0px;
+}
 }
